# Youniverse-Engine

./: .justfile  Cargo.toml
.cargo/: config.toml
client/: Cargo.toml
client/src/: main.rs
crates/engine/: Cargo.toml  build.rs  test.rs
crates/engine/src/core/: application.rs  buffer.rs  mod.rs  pipeline.rs  platform.rs  shaders.rs  sync.rs  vk.rs  window.rs
crates/render/: Cargo.toml
crates/render/src/: device.rs  instance.rs  lib.rs  swapchain.rs  utils.rs
crates/render_bk/: Cargo.toml  build.rs
crates/render_bk/shaders/: default.vert
crates/render_bk/src/core/: application.rs  buffer.rs  sync.rs  util.rs  vk.rs  window.rs
crates/ui/: Cargo.toml
crates/ui/src/: main.rs
crates/window/: Cargo.toml
crates/window/src/: events.rs  lib.rs  raw_handle.rs
src/: lib.rs
