[package]
name = "render_bk"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29.3"
ash = {version = "0.37.2", features = ["linked"]}
ash-window = "0.12.0"
# raw-window-handle = "0.6.0"
glam = { version = "0.25.0", features = ["bytemuck"] }
memoffset = "0.9.0"

# [profile.dev]
# opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3

# Future dependencies for the renderer
