[package]
name = "window"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = {version = "0.29.10", features = ["serde"]}
render = {path = "../render"}
vk-mem = {workspace = true}
anyhow = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
glam = {workspace = true}
ash = {workspace = true}

[lints]
workspace = true
